# minport-py

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  renovate.json
.github/workflows/: audit.yml  ci.yml  release.yml
benchmarks/: README.md  run.py  setup.py  setup.sh
docs/: test-cases.md
src/minport/: __init__.py  _fixer.py  _import_parser.py  _models.py  _module_locator.py  _persistent_cache.py  _progress.py  _reexport_resolver.py  _source_loader.py  checker.py  cli.py
tests/: conftest.py  test_cli.py  test_detection.py  test_edge_cases.py  test_fixer.py  test_import_parser.py  test_persistent_cache.py  test_progress.py  test_reexport_resolver.py  test_third_party.py
